parsers/tree-sitter-minizinc/grammar.js
		source_file: ($) => sepBy(";", field("item", $._item)),

		_item: ($) =>
			choice(
				$.annotation,
				$.assignment,
				$.constraint,
				$.declaration,
				$.enumeration,
				$.function_item,
				$.goal,
				$.include,
				$.output,
				$.predicate,
				$.type_alias
			),

		declaration: ($) =>
			seq(
				field("type", $._type),
				":",
				field("name", $._pattern),
				optional($._annotation_list),
				optional(seq("=", field("definition", $._expression)))
			),

		_annotation_list: ($) =>
			seq(
				repeat1(
					prec.left(
						PREC.annotation,
						seq("::", field("annotation", $._unannotated_expression))
					)
				)
			),

		_expression: ($) =>
			choice($._unannotated_expression, $.annotated_expression),
		_callable: ($) =>
			choice(
				$.inversed_identifier,
				$._identifier,
				$.call,
				$.generator_call,
				$.indexed_access,
				$.tuple_access,
				$.record_access,
				$.parenthesised_expression
			),

		call: ($) =>
			prec(
				PREC.call,
				seq(
					field("function", $._callable),
					"(",
					sepBy(",", field("argument", $._expression)),
					")"
				)
			),

		infix_operator: ($) => {
			const table = /** @type {const} */ ([
				[prec.left, PREC.equivalence, choice(...EQUIVALENCE_OPERATORS)],
				[prec.left, PREC.implication, choice(...IMPLICATION_OPERATORS)],
				[prec.left, PREC.disjunction, choice(...DISJUNCTION_OPERATORS)],
				[prec.left, PREC.conjunction, choice(...CONJUNCTION_OPERATORS)],
				[nonAssoc, PREC.comparative, choice(...COMPARISON_OPERATORS)],
				[prec.left, PREC.union_or_diff, choice(...UNION_DIFF_OPERATORS)],
				[prec.left, PREC.intersect, choice(...INTERSECTION_OPERATORS)],
				[nonAssoc, PREC.range, choice(...RANGE_OPERATORS)],
				[prec.left, PREC.additive, choice(...ADDITIVE_OPERATORS)],
				[prec.left, PREC.multiplicative, choice(...MULTIPLICATIVE_OPERATORS)],
				[prec.right, PREC.exponent, "^"],
				[prec.left, PREC.default, "default"],
			])

			return choice(
				...table.map(([assoc, precedence, operator]) =>
					assoc(
						precedence,
						seq(
							field("left", $._expression),
							field("operator", operator),
							field("right", $._expression)
						)
					)
				)
			)
		},

		prefix_operator: ($) =>
			choice(
				prec(
					PREC.unary,
					seq(
						field("operator", choice("-", "not", "¬")),
						field("operand", $._expression)
					)
				),
				// TODO: Could be nonassoc, will always give type error
				prec.left(
					PREC.range,
					seq(
						field("operator", choice(...RANGE_OPERATORS)),
						field("operand", $._expression)
					)
				)
			),

		_type: ($) =>
			choice(
				$.array_type,
				$.set_type,
				$.tuple_type,
				$.record_type,
				$.operation_type,
				$.type_base,
				$.any_type,
				$.list_type
			),
		array_type: ($) =>
			seq(
				"array",
				"[",
				sepBy1(",", field("dimension", $.type_base)),
				"]",
				"of",
				field("type", $._type)
			),
		set_type: ($) =>
			seq(
				optional(field("var_par", choice("var", "par"))),
				optional(field("opt", "opt")),
				"set",
				"of",
				field("type", $._type)
			),
		tuple_type: ($) =>
			seq(
				optional(field("var_par", choice("var", "par"))),
				"tuple",
				"(",
				sepBy1(",", field("field", $._type)),
				")"
			),
		record_type: ($) =>
			seq(
				optional(field("var_par", choice("var", "par"))),
				"record",
				"(",
				sepBy1(",", field("field", $.record_type_field)),
				")"
			),
		record_type_field: ($) =>
			seq(field("type", $._type), ":", field("name", $._identifier)),
		operation_type: ($) =>
			seq(
				"op",
				"(",
				field("return_type", $._type),
				":",
				"(",
				sepBy(",", field("parameter", $._type)),
				")",
				")"
			),
		type_base: ($) =>
			choice(
				seq(
					optional(field("var_par", choice("var", "par"))),
					optional(field("opt", "opt")),
					field(
						"domain",
						choice(
							$.primitive_type,
							$.type_inst_id,
							$.type_inst_enum_id,
							$._expression
						)
					)
				),
				seq(field("any", "any"), field("domain", $.type_inst_id))
			),
		primitive_type: ($) => choice(...primitive_types),
		type_inst_id: ($) => /\$[A-Za-z][A-Za-z0-9_]*/,
		type_inst_enum_id: ($) => /\$\$[A-Za-z][A-Za-z0-9_]*/,
		any_type: ($) => "any",
		list_type: ($) => seq("list", "of", field("type", $._type)),

		integer_literal: ($) =>
			token(choice(/[0-9]+/, /0x[0-9a-fA-F]+/, /0b[01]+/, /0o[0-7]+/)),
		identifier: ($) => /[\p{L}_][\p{L}\p{N}_]*/u,
		_identifier: ($) => choice($.identifier, $.quoted_identifier),

		_pattern: ($) =>
			choice(
				$._identifier,
				$.absent,
				$.anonymous,
				$.boolean_literal,
				$.string_literal,
				$.pattern_numeric_literal,
				$.pattern_call,
				$.pattern_tuple,
				$.pattern_record
			),
